; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_svn_wc_relocate3.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_svn_wc_relocate3.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SVN_ERR_UNSUPPORTED_FEATURE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [39 x i8] c"Non-recursive relocation not supported\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_wc_relocate3(i8* %0, i32* %1, i8* %2, i8* %3, i32 %4, i32 %5, i8* %6, i32* %7) #0 {
  %9 = alloca i8*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i8*, align 8
  %16 = alloca i32*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i32*, align 8
  store i8* %0, i8** %9, align 8
  store i32* %1, i32** %10, align 8
  store i8* %2, i8** %11, align 8
  store i8* %3, i8** %12, align 8
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i8* %6, i8** %15, align 8
  store i32* %7, i32** %16, align 8
  %19 = load i32, i32* %13, align 4
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %26, label %21

21:                                               ; preds = %8
  %22 = load i32, i32* @SVN_ERR_UNSUPPORTED_FEATURE, align 4
  %23 = call i32 @_(i8* getelementptr inbounds ([39 x i8], [39 x i8]* @.str, i64 0, i64 0))
  %24 = call i32 @svn_error_create(i32 %22, i32* null, i32 %23)
  %25 = call i32 @SVN_ERR(i32 %24)
  br label %26

26:                                               ; preds = %21, %8
  %27 = load i8*, i8** %9, align 8
  %28 = load i32*, i32** %16, align 8
  %29 = call i32 @svn_dirent_get_absolute(i8** %17, i8* %27, i32* %28)
  %30 = call i32 @SVN_ERR(i32 %29)
  %31 = load i32*, i32** %10, align 8
  %32 = call i32 @svn_wc__adm_get_db(i32* %31)
  %33 = load i32*, i32** %16, align 8
  %34 = call i32 @svn_wc__context_create_with_db(i32** %18, i32* null, i32 %32, i32* %33)
  %35 = call i32 @SVN_ERR(i32 %34)
  %36 = load i32*, i32** %18, align 8
  %37 = load i8*, i8** %17, align 8
  %38 = load i8*, i8** %11, align 8
  %39 = load i8*, i8** %12, align 8
  %40 = load i32, i32* %14, align 4
  %41 = load i8*, i8** %15, align 8
  %42 = load i32*, i32** %16, align 8
  %43 = call i32 @svn_wc_relocate4(i32* %36, i8* %37, i8* %38, i8* %39, i32 %40, i8* %41, i32* %42)
  %44 = call i32 @SVN_ERR(i32 %43)
  %45 = load i32*, i32** %18, align 8
  %46 = call i32 @svn_wc_context_destroy(i32* %45)
  %47 = call i32* @svn_error_trace(i32 %46)
  ret i32* %47
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @svn_error_create(i32, i32*, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @svn_dirent_get_absolute(i8**, i8*, i32*) #1

declare dso_local i32 @svn_wc__context_create_with_db(i32**, i32*, i32, i32*) #1

declare dso_local i32 @svn_wc__adm_get_db(i32*) #1

declare dso_local i32 @svn_wc_relocate4(i32*, i8*, i8*, i8*, i32, i8*, i32*) #1

declare dso_local i32* @svn_error_trace(i32) #1

declare dso_local i32 @svn_wc_context_destroy(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
